unpackaged/main/default/objects/ContactPointAddress/fields/Undeliverable_Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Undeliverable_Date_Resolved__c</fullName>
    <label>Undeliverable Date Resolved</label>
    <type>Date</type>
</CustomField>