unpackaged/main/default/objects/ContactPointAddress/fields/Undeliverable_Notes__c.field-meta.xml
<CustomField>
    <fullName>Undeliverable_Notes__c</fullName>
    <label>Undeliverable Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>