unpackaged/main/default/objects/ContactPointAddress/fields/Undeliverable_Status__c.field-meta.xml
<CustomField>
    <fullName>Undeliverable_Status__c</fullName>
    <label>Undeliverable Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>